tests/baselines/reference/FunctionDeclaration7.errors.txt
==== tests/cases/compiler/FunctionDeclaration7.ts (1 errors) ====
    module M {
       function foo();
       ~~~~~~~~
!!! FunctionDeclaration7.ts(2,4): error TS2238: Function implementation expected.
    }